Fix scrollbar

--- a/packages/chrome-ui/src/styles.css
+++ b/packages/chrome-ui/src/styles.css
@@ -7,3 +7,8 @@ body {
   background: #202124;
   padding: 0 !important;
 }
+
+::-webkit-scrollbar {
+  width: 0;
+  background: transparent;
+}
